--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,22 +1,17 @@
 aliyun-python-sdk-alidns==3.0.7
 aliyun-python-sdk-core==2.13.36
-aliyun-python-sdk-core-v3==2.13.33
-aliyun-python-sdk-domain==3.14.9
+aliyunsdkcore==1.0.3
 blinker==1.6.2
-certifi==2023.5.7
 cffi==1.15.1
-charset-normalizer==3.2.0
 click==8.1.5
 cryptography==41.0.2
 Flask==2.3.2
-idna==3.4
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==0.10.0
 MarkupSafe==2.1.3
 pycparser==2.21
-requests==2.31.0
-urllib3==2.0.3
+pycrypto==2.6.1
 Werkzeug==2.3.6
 zipp==3.16.2
