fix name issuse

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
       "ACCESSKEYID": ""
       "ACCESSSECRET": ""
 
-    container_name: "aliddns-http-server"
+    container_name: "http-aliddns-server"
